tests/snapshots/snapshots__pipeline@errors_ctl_poly.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/errors_ctl_poly.pr
---
== tokens ==
VOpen Effect UIdent("Bail") VOpen Ident("bail") LParen KwString RParen Colon Ident("a") VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("r") Eq VOpen Handle Ident("bail") LParen StringLit("nope") RParen With VOpen Ident("bail") LParen Ident("m") RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 0, suffix: None }) RParen VSemi Return Ident("v") FatArrow Ident("v") VClose VClose VSemi Ident("println") LParen Ident("r") RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Bail",
            params: [],
            ops: [
                EffOp {
                    name: "bail",
                    params: [
                        Str,
                    ],
                    ret: Var(
                        "a",
                    ),
                    grade: Many,
                },
            ],
            span: 0..30,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "r",
                    Spanned {
                        node: Handle(
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "bail",
                                        ),
                                        span: 65..69,
                                    },
                                    [
                                        Spanned {
                                            node: Str(
                                                "nope",
                                            ),
                                            span: 70..76,
                                        },
                                    ],
                                ),
                                span: 65..77,
                            },
                            [
                                Op(
                                    "bail",
                                    [
                                        "m",
                                    ],
                                    "k",
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "k",
                                                ),
                                                span: 109..110,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 111..112,
                                                },
                                            ],
                                        ),
                                        span: 109..113,
                                    },
                                ),
                                Return(
                                    "v",
                                    Spanned {
                                        node: Var(
                                            "v",
                                        ),
                                        span: 132..133,
                                    },
                                ),
                            ],
                        ),
                        span: 58..133,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 136..143,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 144..145,
                                },
                            ],
                        ),
                        span: 136..146,
                    },
                ),
                span: 46..146,
            },
            wheres: [],
            span: 32..146,
        },
    ],
}

== types ==
[E6029] Type Error: op `bail` has a polymorphic return type and can only be handled by `never`
   ╭─[ <source>:7:27 ]
   │
 7 │       bail(m) resume k => k(0)
   │                           ──┬─  
   │                             ╰─── op `bail` has a polymorphic return type and can only be handled by `never`
───╯
